[gd_scene load_steps=19 format=3 uid="uid://djf40pfvher4g"]

[ext_resource type="Script" path="res://Scripts/floor_one_boss.gd" id="1_1kglw"]
[ext_resource type="Texture2D" uid="uid://daeco6mewdm6p" path="res://Sprites/Bosses/FloorOne_Boss_32x32.png" id="1_rahyn"]
[ext_resource type="Shader" uid="uid://yjwcuns2he2i" path="res://Shaders/HitFlash.tres" id="2_a3lcc"]
[ext_resource type="AudioStream" uid="uid://ds3tq1pmteqws" path="res://Sounds/BossOne/BossOneBeamAppear.mp3" id="3_2cftc"]
[ext_resource type="AudioStream" uid="uid://dljw5imhl521u" path="res://Sounds/BossOne/BossOneBeamShoot.mp3" id="4_m3x5b"]
[ext_resource type="AudioStream" uid="uid://b3rlq665xeyjo" path="res://Sounds/BossOne/BossOneShoot.mp3" id="5_by7xi"]
[ext_resource type="AudioStream" uid="uid://d21rpm03l7kxv" path="res://Sounds/BossOne/BossOneSummon.mp3" id="6_tyvry"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lbso1"]
shader = ExtResource("2_a3lcc")
shader_parameter/Enabled = false
shader_parameter/Flash = Color(0.577008, 0.577008, 0.577008, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_woarp"]
atlas = ExtResource("1_rahyn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj1qt"]
atlas = ExtResource("1_rahyn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_psvc0"]
atlas = ExtResource("1_rahyn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8oax"]
atlas = ExtResource("1_rahyn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kdtvu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_woarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj1qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psvc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8oax")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dvueo"]
radius = 6.5
height = 20.5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lar77"]

[sub_resource type="Animation" id="Animation_bfltd"]
resource_name = "HitFlash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_lsm1b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0y0e6"]
_data = {
"HitFlash": SubResource("Animation_bfltd"),
"RESET": SubResource("Animation_lsm1b")
}

[node name="FloorOneBoss" type="CharacterBody2D"]
texture_filter = 1
position = Vector2(929, 475)
scale = Vector2(7, 7)
collision_layer = 2
script = ExtResource("1_1kglw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_lbso1")
sprite_frames = SubResource("SpriteFrames_kdtvu")
autoplay = "default"
frame = 1
frame_progress = 0.514684

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.25)
shape = SubResource("CapsuleShape2D_dvueo")

[node name="Area2D" type="Area2D" parent="CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/Area2D"]
position = Vector2(0, 0.75)
shape = SubResource("CapsuleShape2D_lar77")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="BeamAppear" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2cftc")

[node name="BeamShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_m3x5b")

[node name="BossShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_by7xi")

[node name="Summoning" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tyvry")

[node name="BeatTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0y0e6")
}

[connection signal="body_entered" from="CollisionShape2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="BeatTimer" to="." method="_on_beat_timer_timeout"]
